Fix layout issues in recent versions of Firefox and Chromium

--- a/WebContent/themes/lblue/i2pbote.css
+++ b/WebContent/themes/lblue/i2pbote.css
@@ -94,7 +94,7 @@ iframe {
 
 .menubox {
     float: left;
-    width: 175px;
+    width: 180px;
     margin: 0px 0px 10px 10px;
     padding: 10px;
     text-align: left;
@@ -316,7 +316,8 @@ input[type=text] {
     text-decoration: none;
 }
 
-input checkbox {
+input[type=checkbox] {
+    min-width: 10px;   /* for Chrome */
     border: 0 !important;
 }
 
@@ -433,13 +434,18 @@ table td, th {
 }
 
 .identity-buttons {
-	position: absolute;
+	text-align: left;
 }
 	
 .identity-delete {
 	text-align: right;
 }
     
+.identity-buttons, .identity-delete {
+    display: inline-block;
+    width: 250px;
+}
+
 .full-identity {
 	margin-right: 10px;
 }
@@ -645,3 +651,10 @@ table td, th {
 }
 
 wbr:after { content: "\00200B" }   /* For Opera */
+
+.ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+}
